@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Wed Sep 06 12:13:54 CEST 2006
+// Thu Sep 07 13:28:11 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -40,6 +40,7 @@ namespace Mono.Cecil.Cil {
 
 		IList m_items;
 		MethodBody m_container;
+		public readonly Instruction Outside = new Instruction (OpCodes.Nop);
 
 		public Instruction this [int index] {
 			get { return m_items [index] as Instruction; }
@@ -74,13 +75,11 @@ namespace Mono.Cecil.Cil {
 
 		internal void Add (Instruction value)
 		{
-
 			m_items.Add (value);
 		}
 
 		public void Clear ()
 		{
-
 			m_items.Clear ();
 		}
 
@@ -96,19 +95,16 @@ namespace Mono.Cecil.Cil {
 
 		internal void Insert (int index, Instruction value)
 		{
-
 			m_items.Insert (index, value);
 		}
 
 		internal void Remove (Instruction value)
 		{
-
 			m_items.Remove (value);
 		}
 
 		internal void RemoveAt (int index)
 		{
-
 			m_items.RemoveAt (index);
 		}
 
