@@ -1,5 +1,8 @@
 2006-09-07  Jb Evain  <jbevain@gmail.com>
 
+	* Add an Outside instruction to an InstructionCollection.
+	Cleaner than the old null instruction.
+
 	* Mono.Cecil/MarshalSpec.cs
 	  Mono.Cecil/ReflectionReader.cs
 	  Mono.Cecil/ReflectionWriter.cs
